# goutte

./: .gitignore  .travis.example.yml  .travis.yml  Dockerfile  README.md  conf.example.toml  goutte.example.toml  goutte.example.yml  pyproject.toml
goutte/: __init__.py  cli.py  config.py  do.py  main.py  utils.py
tests/: mock.py  test_goutte.py
